--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="flex justify-center items-center gap-2"> 
            <div class="justify-center items-center flex gap-2 px-2 bg-[rgb(244,247,255)] rounded-3xl border-none">
-             <i class="fa-solid fa-check w-[32px] h-[32px] bg-blue-700 text-white rounded-md flex justify-center items-center font-bold text-[20px]"></i> <span id="totalAmount" class="poppins font-bold text-[32px] text-[rgb(30,30,30)] ">23</span> 
+             <i class="fa-solid fa-check w-[32px] h-[32px] bg-blue-700 text-white rounded-md flex justify-center items-center font-bold text-[20px]"></i> <span id="totalAmount" class="poppins font-bold text-[32px] text-[rgb(30,30,30)] ">22</span> 
             </div>
            <div onclick="changeColor()" class="p-2 bg-[rgb(244,247,255)]  rounded-3xl border-none"><img src="./assets/theme-btn.png" alt=""></div>
         </div>
@@ -78,9 +78,9 @@
                      <div>
                         <h1 id="title1" class="title text-2xl font-medium my-2 text-black">Fix Mobile Button Issue</h1>
                      </div>
-                     <div class="bg-white flex items-center justify-center rounded-md px-2 py-2 border-none w-[px] h-[50px]">
+                     <div class="bg-white flex items-center justify-center rounded-md px-2 py-2 border-none w-[px] h-[50px] overflow-y-auto overflow-hidden">
                         <h1 class="text-black poppins opacity-[0.5] poppins">
-                            Debug using Chrome DevTools, check for overlapping ...
+                           Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly and ensure onClick works properly
                         </h1>
                      </div>
                      <div class="border-b-2 border-dotted border-gray-400 my-5"></div>
@@ -102,9 +102,9 @@
                      <div>
                         <h1 id="title2" class="title text-2xl font-medium my-3 text-black">Add Dark Mode</h1>
                      </div>
-                     <div class="bg-white flex items-center justify-center rounded-md px-2 py-2 border-none w-[px] h-[50px] ">
+                     <div class="bg-white flex items-center justify-center rounded-md px-2 py-2 border-none w-[px] h-[50px] overflow-hidden overflow-y-auto">
                         <h1 class="text-black poppins opacity-[0.5] poppins">
-                            store the users preference in localstorage , update css ...
+                           Store the user's preference in localStorage, update CSS variables dynamically, and apply a smooth transition effect.
                         </h1>
                      </div>
                      <div class="border-b-2 border-dotted border-gray-400 my-5"></div>
@@ -126,9 +126,10 @@
                      <div>
                         <h1 id="title3" class="title text-2xl font-medium my-3 text-black">Optimize Home Page</h1>
                      </div>
-                     <div class="bg-white flex items-center justify-center rounded-md px-2 py-2 border-none w-[px] h-[50px] ">
+                     <div class="bg-white flex items-center justify-center rounded-md px-2 py-2 border-none w-[px] h-[50px] overflow-hidden overflow-y-auto">
                         <h1 class="text-black poppins opacity-[0.5] poppins">
-                            Debug using Chrome DevTools, check for overlapping ...
+                           Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly
+                           and ensure onClick works properly
                         </h1>
                      </div>
                      <div class="border-b-2 border-dotted border-gray-400 my-5"></div>
@@ -150,9 +151,9 @@
                      <div>
                         <h1 id="title4" class="title text-2xl font-medium my-3 text-black">Add new emoji</h1>
                      </div>
-                     <div class="bg-white flex items-center justify-center rounded-md px-2 py-2 border-none w-[px] h-[50px] ">
+                     <div class="bg-white flex items-center justify-center rounded-md px-2 py-2 border-none w-[px] h-[50px] overflow-hidden overflow-y-auto">
                         <h1 class="text-black poppins opacity-[0.5] poppins">
-                            Debug using Chrome DevTools, check for overlapping ...
+                           Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly and ensure onClick works properly
                         </h1>
                      </div>
                      <div class="border-b-2 border-dotted border-gray-400 my-5"></div>
@@ -174,9 +175,9 @@
                      <div>
                         <h1 class="text-2xl font-medium my-3 text-black">Integrate OpenAi Api</h1>
                      </div>
-                     <div class="bg-white flex items-center justify-center rounded-md px-2 py-2 border-none w-[px] h-[50px] ">
+                     <div class="bg-white flex items-center justify-center rounded-md px-2 py-2 border-none w-[px] h-[50px] overflow-hidden overflow-y-auto ">
                         <h1 class="text-black poppins opacity-[0.5] poppins">
-                            Debug using Chrome DevTools, check for overlapping ...
+                           Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly and ensure onClick works properly
                         </h1>
                      </div>
                      <div class="border-b-2 border-dotted border-gray-400 my-5"></div>
@@ -198,9 +199,9 @@
                      <div class="head">
                         <h1 id="title-6" class="title text-2xl font-medium my-3 text-black">Improve Job Searching</h1>
                      </div>
-                     <div class="bg-white flex items-center justify-center rounded-md px-2 py-2 border-none w-[px] h-[50px] ">
+                     <div class="bg-white flex items-center justify-center rounded-md px-2 py-2  border-none w-[px] h-[50px] overflow-hidden overflow-y-auto scrollbar-hidden">
                         <h1 class="text-black poppins opacity-[0.5] poppins">
-                            Debug using Chrome DevTools, check for overlapping ...
+                           Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly and ensure onClick works properly
                         </h1>
                      </div>
                      <div class="border-b-2 border-dotted border-gray-400 my-5"></div>
