--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@
                 <div  class="card  flex space-x-2  rounded-lg
                  bg-[rgb(244,247,255)] p-4 justify-center">
                      <div class="bg-white flex items-center justify-center rounded-md px-4 py-2 border-none w-[122px] h-[47px] ml-3 ">
-                        <h1 id="title5" class="title text-black poppins">Google LLC</h1>
+                        <h1 id="" class=" text-black poppins">Google LLC</h1>
                      </div>
                      <div>
-                        <h1 class="text-2xl font-medium my-3 text-black">Integrate OpenAi Api</h1>
+                        <h1 id="title5" class="title text-2xl font-medium my-3 text-black">Integrate OpenAi Api</h1>
                      </div>
                      <div class="bg-white flex items-center justify-center rounded-md px-2 py-2 border-none w-[px] h-[50px] overflow-hidden overflow-y-auto ">
                         <h1 class="text-black poppins opacity-[0.5] poppins">
