--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
                      <div>
                         <h1 id="title2" class="title text-2xl font-medium my-3 text-black">Add Dark Mode</h1>
                      </div>
-                     <div class="bg-white flex items-center justify-center rounded-md px-2 py-2 border-none w-[px] h-[50px] overflow-hidden overflow-y-auto">
-                        <h1 class="text-black poppins opacity-[0.5] poppins">
-                           Store the user's preference in localStorage, update CSS variables dynamically, and apply a smooth transition effect.
+                     <div class="bg-white flex items-center justify-center rounded-md p-2 border-none w-[px] h-[50px] overflow-hidden overflow-y-auto">
+                        <h1 class="text-black text-[15px] poppins opacity-[0.5] poppins pt-5">
+                           Store the user's preference in localStorage,update CSS variables dynamically, and apply a smooth transition effect.
                         </h1>
                      </div>
                      <div class="border-b-2 border-dotted border-gray-400 my-5"></div>
@@ -246,8 +246,14 @@
         </section>
     </main>
 
+    
 
 <script src="./js/script.js"></script>
 <script src="./js/utilities.js"></script>
 </body>
 </html>
+
+
+
+<!-- Repo Link : https://github.com/Hasnatkallol/Dev-Board -->
+<!-- Live Link : https://hasnatkallol.github.io/Dev-Board/ -->
